add django4.1 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38,39}-dj{22,31,32}-{standard,parallel}
+	py{36,37,38,39,310}-dj{22,31,32,40,41}-{standard,parallel}
 skip_missing_interpreters = true
 
 [travis:env]
@@ -8,6 +8,8 @@ DJANGO =
     2.2: dj22-{standard,parallel}
     3.1: dj31-{standard,parallel}
     3.2: dj32-{standard,parallel}
+	4.0: dj40-{standard,parallel}
+	4.1: dj41-{standard,parallel}
 
 [docker:db]
 image = postgres:9.6
@@ -22,10 +24,12 @@ deps =
 	coverage
 	mock
 	tblib
-	psycopg2-binary<=2.8.6
+	psycopg2-binary<=2.9.5
 	dj22: Django>=2.2a1,<3.0
 	dj31: Django>=3.1a1,<3.2
 	dj32: Django>=3.2a1,<4.0
+	dj40: Django>=4.0.1,<4.1
+	dj41: Django>=4.1.1,<5.0
 
 docker =
 	pg96: db
